[tool.poetry]
name = "moonline"
version = "0.2.0"
description = "A Zipline-inspired backtesting implementation."
authors = ["Tim Wedde <timwedde@icloud.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/boosting-alpha-bv/moonline"
homepage = "https://github.com/boosting-alpha-bv/moonline"

[tool.poetry.dependencies]
python = "^3.7"
tqdm = "^4.36"
pandas = "^0.25.1"
arrow = "^0.15.2"
quantrocket-moonshot = "^1.9"
quantrocket-moonchart = "^1.8"
trading-calendars = "^1.10"
ib-trading-calendars = "^0.1.2"
quantrocket-utils = "^0.1.6"
pymarketstore = {git = "https://github.com/alpacahq/pymarketstore.git"}
pystore = "^0.1.14"
dask = {version = "^2.6", extras = ["dataframe"]}

[tool.poetry.dev-dependencies]
pdoc3 = "^0.7.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
